--- a/WisdomBites/src/main/resources/WisdomBites/personalised_msg.fxml
+++ b/WisdomBites/src/main/resources/WisdomBites/personalised_msg.fxml
@@ -28,7 +28,7 @@
     </top>
 
 
-    <!-- Center content -->
+    <!-- Centre content -->
     <center>
         <VBox spacing="20" alignment="TOP_CENTER">
             <padding>
